# bathydrone

./: .gitignore  .gitmodules  README.md  tension_plugin.hh
bathylaunch/: CMakeLists.txt  package.xml
bathylaunch/src/: bathylaunch.launch  launch_bathyboat.sh  test.launch
docs/: .install.md.swp  install.md
drone_trajectory/: CMakeLists.txt  package.xml
drone_trajectory/src/: drone_trajectory.cpp  drone_trajectory_node.cpp
gnc/: NewnansLakePath.csv  README.md  boat.py  citra-pond-coords (2).csv  coefficients.py  integral_stanley.py  lake-wauburg-coords.csv  linearized_boat.py  newnans-lake-coords.csv  open_loop_dynamics.py  path_planner.py  path_planner_2023  path_planner_2023.py  path_planning.py  requirements.txt  stanley_controller.py  test.py  tethered_dynamics.py  traj_planning.py  waypoint_gen.py
launch/: launch_bathyboat.launch
maps_image_processing/: README.md  grip.py  grip_citra.py  grip_citra_pgram.py  grip_newnans.py  grip_sfwmd_left.py  grip_sfwmd_top.py  input-bounds.csv  newnans-lake-bounds.csv  requirements.txt  test.py  water-body-demo-out.csv  water_body_demo.py
path_planning_ui/: .gitignore  LatLongTurn_Integrated_Code.py  README.md  adding_accel_decel_waypoints.py  april_fastsam_ui.py  april_fastsam_ui_8_1_24.py  lat_long_turn_integrated.py  mission_planner.py  mission_planner_code_python.py  requirements.txt
simulation/: .include_tension_to_model.xacro.swp  cmakeLists.txt  include_tension_to_model.xacro
tension_plugin/: CMakeLists.txt  tension_plugin.cc
tension_plugin/include/tension_plugin/: tension_plugin.hh
(+48 files in other folders)
